--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1 id="title" class="topheader">Press Enter or click</h1>
+  <h1 id="title" class="topheader">Press Enter or tap</h1>
     <h1 id="level" class="topheader">to Start</h1>
   <div class="container">
     <div lass="row">
